objects/ffr__XXXInvoice__c.object
<CustomObject>
    <description>For internal use only.</description>
    <fields>
        <fullName>ffr__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__CommonNameTest__c</fullName>
        <description>Test common names for Dataview</description>
        <label>Common Name Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TestOne</fullName>
                </value>
                <value>
                    <fullName>TestTwo</fullName>
                </value>
                <value>
                    <fullName>TestThree</fullName>
                </value>
                <value>
                    <fullName>TestFour</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__CustomerReference__c</fullName>
        <label>Customer Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__DateTimeField__c</fullName>
        <label>Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffr__DeriveDueDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__InvoiceCurrency__c</fullName>
        <label>Invoice Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__InvoiceDescription__c</fullName>
        <label>Invoice Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffr__InvoiceDueDate__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__InvoiceRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Invoice Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__InvoiceStatus__c</fullName>
        <description>The current status of the invoice.</description>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Ready to Post</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__InvoiceTotal__c</fullName>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>ffr__XXXPeriod__c</referenceTo>
        <relationshipLabel>XXX Invoice Periods</relationshipLabel>
        <relationshipName>InvoicePeriods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__SalesTaxStatus__c</fullName>
        <description>The current sales tax status of the invoice.</description>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Calculated</fullName>
                    <default>true</default>
                    <label>Not Calculated</label>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>ffr__XXXTransaction__c</referenceTo>
        <relationshipLabel>XXX Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__gla__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>ffr__XXXGLA__c</referenceTo>
        <relationshipLabel>XXX Invoices GLAs</relationshipLabel>
        <relationshipName>InvoicesGLAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>XXX Invoice</label>
    <nameField>
        <displayFormat>XINV{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>